workspace-sf/force-app/main/default/objects/CondicaoOferta__c/CondicaoOferta__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as condições de ofertas.</description>
    <label>Condição de Oferta</label>
    <nameField>
        <label>Nome da Condição</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Condições de Ofertas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>