workspace-sf/force-app/main/default/objects/CondicaoOferta__c/fields/Conteudo__c.field-meta.xml
<CustomField>
    <fullName>Conteudo__c</fullName>
    <label>Conteudo</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>