workspace-sf/force-app/main/default/objects/CondicaoOferta__c/fields/DecisaoOferta__c.field-meta.xml
<CustomField>
    <fullName>DecisaoOferta__c</fullName>
    <label>Decisão de Oferta</label>
    <referenceTo>DecisaoOferta__c</referenceTo>
    <relationshipLabel>Condições de Ofertas</relationshipLabel>
    <relationshipName>Condi_es_de_Ofertas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>