workspace-sf/force-app/main/default/objects/CondicaoOferta__c/fields/Operacao__c.field-meta.xml
<CustomField>
    <fullName>Operacao__c</fullName>
    <label>Operação</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>=</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&lt;&gt;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>