workspace-sf/force-app/main/default/objects/CondicaoOferta__c/fields/Variavel__c.field-meta.xml
<CustomField>
    <fullName>Variavel__c</fullName>
    <label>Variável</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>